--- a/philo/Makefile
+++ b/philo/Makefile
@@ -6,23 +6,24 @@
 #    By: dhawkgir <dhawkgir@student.21-school.ru    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/03/07 12:11:30 by dhawkgir          #+#    #+#              #
-#    Updated: 2022/03/07 23:38:36 by dhawkgir         ###   ########.fr        #
+#    Updated: 2022/03/10 15:43:15 by dhawkgir         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME	=	philo
 SRCDIR	=	srcs
 OBJDIR	=	objs
-SRCS	=	$(SRCDIR)/dead.c \
-			$(SRCDIR)/forks.c \
-			$(SRCDIR)/input.c \
-			$(SRCDIR)/main.c \
-			$(SRCDIR)/print.c \
-			$(SRCDIR)/routine.c \
-			$(SRCDIR)/simulation.c \
-			$(SRCDIR)/parse.c \
-			$(SRCDIR)/timestamp.c \
+SRCS	=	$(SRCDIR)/dead.c 		\
+			$(SRCDIR)/forks.c 		\
+			$(SRCDIR)/input.c 		\
+			$(SRCDIR)/main.c 		\
+			$(SRCDIR)/print.c 		\
+			$(SRCDIR)/routine.c 	\
+			$(SRCDIR)/simulation.c 	\
+			$(SRCDIR)/parse.c 		\
+			$(SRCDIR)/timestamp.c 	\
 			$(SRCDIR)/utils.c
+
 OBJS	=	$(SRCS:$(SRCDIR)/%.c=$(OBJDIR)/%.o)
 CC		=	cc
 INCS	=	-Iincludes/
@@ -37,9 +38,9 @@ FCLEAN_MSG	=	"Executable has been deleted."
 all:		$(NAME)
 
 $(NAME):	$(OBJS)
-			@printf $(COMPILE_MSG)
-			@$(CC) $(OBJS) $(FLAGS) -o $(NAME) -lpthread
-			@echo $(DONE_MSG)
+				@printf $(COMPILE_MSG)
+				@$(CC) $(OBJS) $(FLAGS) -o $(NAME) -lpthread
+				@echo $(DONE_MSG)
 
 $(OBJDIR)/%.o:	$(SRCDIR)/%.c
 				@mkdir -p $(OBJDIR)
@@ -47,13 +48,16 @@ $(OBJDIR)/%.o:	$(SRCDIR)/%.c
 				@$(CC) $(FLAGS) -c -o $@ $< $(INCS)
 
 clean:
-			@rm -rf $(OBJDIR)
-			@echo $(CLEAN_MSG)
+				@rm -rf $(OBJDIR)
+				@echo $(CLEAN_MSG)
 
-fclean:		clean
-			@rm -rf $(NAME)
-			@echo $(FCLEAN_MSG)
+fclean:			clean
+				@rm -rf $(NAME)
+				@echo $(FCLEAN_MSG)
 
-re:			fclean all
+re:				fclean all
 
-.PHONY:		all clean fclean re .c.o
+norm:
+				norminette
+
+.PHONY:			all clean fclean re norm
